(from www.h2database.com) for contributing code to fix the issue)

1731251: (Cryptic exceptions with DB2 JCC driver) Provides an API to allow 
plugin authors to create and register custom exception formatters to be used 
when displaying error messages and the like in the session message panel.

Finished German translation

Bug-Fixes:

Got to line dialog (ctrl+g) was missing lables.

1752089 (ConcurrentModificationException raised when loading schema)

1716859 Can't see data in content tab or row count tab (MS SQLServer databases
        with a dash ("-") in their name would cause the content tab or row count
        tabs to render no data.

1714476 (DB copy uses wrong case for table names) The copy operation would
         sometimes fail to select records from the source table.  Since the
         case for the source table is always known to be correct, the plugin
         no longer erroneously attempts to correct the case.

1714475: (Adding rows from the content tab)  When inserting row data, pay 
         attention to isAutoIncrement flag so that these columns are excluded 
         like rowId columns.  After insert, refresh the table data so that 
         auto-generated fields are populated.

1704798 ISQLExecutionListeners cannot return "null"

1701380 addSQLExecutionListener is broken

1700093 Formatter fails for insert script with multiple subselects

1699294 Squirrel imports BLOB, but does not update data 

138092 (PostgreSQL table types) Now PostgreSQL table types list and object tree
       exclude "SYSTEM INDEX" type.  Treating these objects as tables causes 
       lots of SQLExceptions from the PostgreSQL jdbc driver.

Refactoring Plugin:
 - When building a new TableColumnInfo, if the defaultValue textfield is blank, 
   then make the default value be null.

Task 137984 (Bug in alias delete) The problem was that notifications were 
  being sent to the alias drop-down that the item was being deleted which 